--- a/website/index.html
+++ b/website/index.html
@@ -15,11 +15,12 @@
     </div>
     <div class="holder zip">
       <label for="zip">Enter Zipcode here</label>
-      <input type="text" id="zip" placeholder="enter zip code here">
+      <input type="text" name='userzip' id="zip" placeholder="enter zip code here">
     </div>
     <div class="holder feel">
       <label for="feelings">How are you feeling today?</label>
-      <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="7" cols="50"></textarea>
+      <textarea class="myInput" name="usermessage" id="feelings" placeholder="Enter your feelings here" rows="7"
+        cols="50"></textarea>
       <button id="generate" type="submit"> Generate </button>
     </div>
     <div class="holder entry">
